# scriptingExercice

./: README.md  powershell
powershell/: script.ps1
powershell/partie1/: OBJECTIF.md  consigne.txt  link_github  script
powershell/partie2/: EmployeTools.psm1  README.md  consignes  rapport-employes.ps1
python/: REAMD.md  consignes  main.py  pyproject.toml  requirements.txt
python/utils/: helphers.py
shell/: README.md  gestion.sh  log.txt
